# imbibitionEq

./: .cproject  .gitignore  .project  CMakeLists.txt  aclocal.m4  config.h.cmake  config.h.in  configure.ac  dependencies.m4  dune.module  imbibitionEq.pc.in
cmake/: Makefile  Makefile.in
cmake/modules/: CMakeLists.txt  Findo2scl.cmake  ImbibitionEqMacros.cmake  Makefile  Makefile.am  Makefile.in
doc/: Makefile  Makefile.am  Makefile.in
doc/doxygen/: Doxyfile  Doxyfile.in  Doxylocal  Makefile  Makefile.in
dune/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
dune/imbibitionEq/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  imbibitionEq.hh
m4/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  imbibitionEq.m4
src/: CMakeLists.txt  Makefile.am  anLin.gnu  bctype.hh  chernoff-driver.hh  chernoff_operator.hh  driver.hh  imbibition.input  imbibitionEq.cc  imbibitionFunctions.hh  integration.hh  linear_analytic.cc  linear_analytic.hh  mgf.cc  mgf.hh  parameters.hh  space_operator.hh  tableXY.hh  test.hh  test_functions.cc  text_output.hh  timeMng.hh  time_operator.hh  type_switch.hh  vangenuchten.hh
src/Example1/: clean  clin-an.gnu  clin-sol.gnu  flux-diff.gnu
src/Example2/: flux-diff.gnu  imbibition.input
src/Example3/: clin-sol.gnu  diff_sol.gnu  flux-diff.gnu  flux.gnu  imbibition.input
src/Example4/: imbibition.input
src/Example4/gnu/: all-an.gnu  clin-an.gnu  flux-diff.gnu  flux.gnu  nlin-an.gnu  nlin-sol.gnu  vlin-an.gnu
test/: imbibition.input
